--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.20",
+    "classnames": "^2.3.2",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-icons": "^4.6.0",
