--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "react-transitions": "^1.0.0",
+    "styled-components": "^6.1.1",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.200",
-    "@types/react-transition-group": "^4.4.5"
+    "@types/react-transition-group": "^4.4.5",
+    "@types/styled-components": "^5.1.30"
   }
 }
