--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.20",
     "classnames": "^2.3.2",
     "eslint-plugin-react-hooks": "^5.0.0-next-703c67560-20230307",
+    "immer": "^10.0.3",
     "lodash": "^4.17.21",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
