--- a/package.json
+++ b/package.json
@@ -2,16 +2,11 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kangdeokhyoung.github.io/uiDeok/",
   "dependencies": {
-    "@react-icons/all-files": "^4.1.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.3",
-    "@types/react": "^18.0.20",
     "classnames": "^2.3.2",
     "eslint-plugin-react-hooks": "^5.0.0-next-703c67560-20230307",
+    "gh-pages": "^6.1.1",
     "immer": "^10.0.3",
     "lodash": "^4.17.21",
     "prettier": "^2.7.1",
@@ -28,8 +23,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "codemirror": "node setupCodeMirror.js"
   },
   "eslintConfig": {
     "extends": [
@@ -52,6 +50,16 @@
   "devDependencies": {
     "@types/lodash": "^4.14.200",
     "@types/react-transition-group": "^4.4.5",
-    "@types/styled-components": "^5.1.30"
+    "@types/styled-components": "^5.1.30",
+    "@react-icons/all-files": "^4.1.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.3",
+    "@types/react": "^18.0.20",
+    "@uiw/react-codemirror": "^4.21.25",
+    "@codemirror/lang-css": "^6.1.1",
+    "@codemirror/lang-javascript": "^6.1.5"
   }
 }
