--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://kangdeokhyoung.github.io/uiDeok/",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "classnames": "^2.3.2",
     "eslint-plugin-react-hooks": "^5.0.0-next-703c67560-20230307",
     "gh-pages": "^6.1.1",
@@ -12,6 +13,7 @@
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
@@ -48,18 +50,18 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.200",
-    "@types/react-transition-group": "^4.4.5",
-    "@types/styled-components": "^5.1.30",
+    "@codemirror/lang-css": "^6.1.1",
+    "@codemirror/lang-javascript": "^6.1.5",
     "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.14.200",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.20",
-    "@uiw/react-codemirror": "^4.21.25",
-    "@codemirror/lang-css": "^6.1.1",
-    "@codemirror/lang-javascript": "^6.1.5"
+    "@types/react-transition-group": "^4.4.5",
+    "@types/styled-components": "^5.1.30",
+    "@uiw/react-codemirror": "^4.21.25"
   }
 }
